meja/tests/unbound_type-fail.stderr
File "tests/unbound_type-fail.meja", line 1, characters 9-21:
Error: Unbound type constructor unknown_type.
