meja/tests/unbound_type-fail.meja
type t = unknown_type
